Add Thumbnail support
- add method to generate thumbnails using ghostscript
- add tests for that
- refactored and added commandHelper (and tests)
- updated swagger versions
